--- a/client/main.html
+++ b/client/main.html
@@ -1,6 +1,3 @@
-<body>
-</body>
-
 <template name="ApplicationLayout">
     <div class="container">
         {{> header}}
@@ -27,6 +24,9 @@
             </li>
             <li>
                 <a href="/chat">Chat</a>
+            </li>
+            <li>
+                <a href="/admin">Admin</a>
             </li>
         </ul>
         <ul class="nav navbar-nav navbar-right" style="padding-top: 10px;">
