--- a/client/experiences.html
+++ b/client/experiences.html
@@ -4,3 +4,17 @@
         Area to share experiences.
     </p>
 </template>
+
+<template name="shareExperienceForm">
+    {{#autoForm collection="Experiences" id="insertExperienceForm" type="method" meteormethod="addExperience"}}
+        <fieldset>
+        <legend>Share your Experience</legend>
+            {{> afQuickField name='topic' type="select" options=topicOptions firstOption="Select Experience" template="bootstrap3-horizontal"  label-class="col-md-1" input-col-class="col-md-4" }} 
+            {{> afQuickField name='description' rows=5}}
+            {{> afQuickField name='rating' type="select" options=ratingOptions firstOption="Select" template="bootstrap3-horizontal"  label-class="col-md-1" input-col-class="col-md-1" }}           
+            
+
+        </fieldset>
+        <button type="submit" class="btn btn-primary">Insert</button>
+    {{/autoForm}}
+</template>
