--- a/client/experiences.html
+++ b/client/experiences.html
@@ -1,7 +1,7 @@
 <template name="experiences">
     <h1>Experiences</h1>
     <p>
-        Area to share experiences.
+        {{> shareExperienceForm}}
     </p>
 </template>
 
@@ -11,8 +11,7 @@
         <legend>Share your Experience</legend>
             {{> afQuickField name='topic' type="select" options=topicOptions firstOption="Select Experience" template="bootstrap3-horizontal"  label-class="col-md-1" input-col-class="col-md-4" }} 
             {{> afQuickField name='description' rows=5}}
-            {{> afQuickField name='rating' type="select" options=ratingOptions firstOption="Select" template="bootstrap3-horizontal"  label-class="col-md-1" input-col-class="col-md-1" }}           
-            
+            {{> afQuickField name='rating' type="select" options=ratingOptions firstOption="Select" template="bootstrap3-horizontal"  label-class="col-md-1" input-col-class="col-md-2" }}
 
         </fieldset>
         <button type="submit" class="btn btn-primary">Insert</button>
