--- a/client/experiences.html
+++ b/client/experiences.html
@@ -1,14 +1,21 @@
 <template name="experiences">
     <h1>Experiences</h1>
+    <table width="100%" style="margin-bottom: 3%;">
+        <tr>
+            <td style="text-align: right; padding-right: 15%;"><h3>Share your experience below</h3></td> 
+            <td style="text-align: left; padding-left: 10%;">
+                <h3><a href="/others">Find out</a> what other's experienced</h3></td> 
+        </tr>
+    </table>
     <p>
         {{> shareExperienceForm}}
     </p>
 </template>
 
 <template name="shareExperienceForm">
-    {{#autoForm collection="Experiences" id="insertExperienceForm" type="method" meteormethod="addExperience"}}
+
+    {{#autoForm collection="Experiences" id="shareExperienceForm" type="method" meteormethod="addExperiences" }}
         <fieldset>
-        <legend>Share your Experience</legend>
             {{> afQuickField name='topic' type="select" options=topicOptions firstOption="Select Experience" template="bootstrap3-horizontal"  label-class="col-md-1" input-col-class="col-md-4" }} 
             {{> afQuickField name='description' rows=5}}
             {{> afQuickField name='rating' type="select" options=ratingOptions firstOption="Select" template="bootstrap3-horizontal"  label-class="col-md-1" input-col-class="col-md-2" }}
