--- a/client/experiences.html
+++ b/client/experiences.html
@@ -8,12 +8,12 @@
         </tr>
     </table>
     <p>
-        {{> shareExperienceForm}}
+        {{> shareExperienceForm}} 
     </p>
 </template>
 
 <template name="shareExperienceForm">
-
+    {{#if signedUser}}
     {{#autoForm collection="Experiences" id="shareExperienceForm" type="method" meteormethod="addExperiences" }}
         <fieldset>
             {{> afQuickField name='topic' type="select" options=topicOptions firstOption="Select Experience" template="bootstrap3-horizontal"  label-class="col-md-1" input-col-class="col-md-4" }} 
@@ -23,4 +23,7 @@
         </fieldset>
         <button type="submit" class="btn btn-primary">Insert</button>
     {{/autoForm}}
+    {{else}}
+    <h4 style="color:blue;">&bull; Sign in to share your experience!</h4>
+    {{/if}}
 </template>
